--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     environment:
       - GITHUB_TOKEN=${GITHUB_TOKEN}
       - GITHUB_ORG_NAME=${GITHUB_ORG_NAME}
-      - AZURE_DEVOPS_TOKEN=${AZURE_DEVOPS_TOKEN:-}
-      - AZURE_DEVOPS_ORG_URL=${AZURE_DEVOPS_ORG_URL:-}
-      - AZURE_DEVOPS_PROJECT=${AZURE_DEVOPS_PROJECT:-}
+      - GITHUB_ITERATION_START=${GITHUB_ITERATION_START:-}
+      - GITHUB_ITERATION_END=${GITHUB_ITERATION_END:-}
+      - GITHUB_ITERATION_NAME=${GITHUB_ITERATION_NAME:-}
     volumes:
       # Mount source code for development (optional)
       - ./src:/app/src:ro
