--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # Core dependencies
-fastapi==0.68.1
-uvicorn==0.15.0
-PyGithub==1.55
-python-dotenv==0.19.0
-requests==2.26.0
-mcp-server==0.1.0
-httpx==0.24.1
-pydantic==1.10.12
+fastapi>=0.68.1
+uvicorn>=0.15.0
+PyGithub>=1.55
+python-dotenv>=0.19.0
+requests>=2.26.0
+mcp>=1.12.2
+httpx>=0.27.0
+pydantic>=1.10.12
 
 # Testing dependencies
 pytest==7.4.0
