--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,70 @@
 # Python-generated files
 __pycache__/
-*.py[oc]
+*.py[cod]
+*$py.class
+*.so
+.Python
 build/
+develop-eggs/
 dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
 wheels/
-*.egg-info
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
 # Virtual environments
-.venv
-.env
+venv/
+.venv/
+.env/
+env/
+ENV/
 
-# Coverage reports
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Testing and coverage
+.pytest_cache/
 .coverage
 .coverage.*
 htmlcov/
+.tox/
+nosetests.xml
+coverage.xml
 *.cover
+.hypothesis/
 .pytest_cache/
+
+# Logging
+*.log
+logs/
+
+# Project specific
+.env
+*.db
+*.sqlite3
+*.sqlite
+
+# Benchmark results
+benchmark.json
+benchmark.html
+
+# Documentation
+docs/_build/
+doc/_build/
+
+# OS-specific
+.DS_Store
+Thumbs.db
