feat: improve web interface and logging
- Enhance error handling in web interface
- Add comprehensive logging system
- Improve report generation with better date handling
- Add logging configuration to all agents
- Update startup script for better process management

build: update project dependencies and package configuration
- Update pyproject.toml and requirements.txt
- Add setup.py for proper installation
- Fix package structure and name

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,8 @@ pytest-cov==4.1.0
 pytest-env==1.0.1
 pytest-mock==3.11.1
 pytest-benchmark==4.0.0
-httpx==0.24.1
+# Using same httpx version as core dependencies
+httpx>=0.27.0
 psutil==5.9.5
 aioresponses==0.7.4
 responses==0.23.1
