Add GitHub Pages report publishing feature
- Fixed error detection logic in publish endpoint
- Fixed web_url generation in ReportPublisher
- Added volume mounts for docs/ and reports/ directories
- Published initial report for WeMoAD-umich Iteration 67

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
     volumes:
       # Mount source code for development (optional)
       - ./src:/app/src:ro
+      # Mount docs and reports directories for persistent storage
+      - ./docs:/app/docs
+      - ./reports:/app/reports
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/github-report"]
