Configure container to use local timezone
- Added TZ environment variable to docker-compose.yml
- Defaults to America/New_York (EST/EDT) but can be overridden
- Container now generates reports with actual local time, not UTC
- Verified: timestamps now match host system time exactly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - GITHUB_ITERATION_START=${GITHUB_ITERATION_START:-}
       - GITHUB_ITERATION_END=${GITHUB_ITERATION_END:-}
       - GITHUB_ITERATION_NAME=${GITHUB_ITERATION_NAME:-}
+      - TZ=${TZ:-America/New_York}
     volumes:
       # Mount source code for development (optional)
       - ./src:/app/src:ro
