Add automated report scheduling, duplicate detection, and human-readable timestamps
Features implemented:
- Auto-scheduled report generation: APScheduler checks hourly for iteration end
- Duplicate detection: Prevents generating same report multiple times per iteration
- Human-readable filenames: Changed from 20251112_150315 to 2025-11-12_03-15-PM format
- Git auto-commit: Host-side script for automated commits (commit-reports.sh)

Docker improvements:
- Flexible user creation: Build args support dev (host UID) and prod (fixed UID)
- Development script (start-dev.sh): Runs with host user permissions
- Production script (start-prod.sh): Runs with fixed UID for consistency
- Production compose file: Optimized settings for deployment

New dependencies:
- APScheduler 3.11.1: Cron-based scheduling for automatic report generation
- GitPython 3.1.45: Git operations (delegated to host for reliability)

Documentation:
- DEPLOYMENT.md: Comprehensive deployment guide with dev/prod instructions
- Explains Docker host vs container, git operations, and production checklist

Architecture decisions:
- Keep git operations on host to avoid Docker permission issues
- Scheduler runs inside container, commits via host script
- Production-ready with GitHub Actions option for CI/CD

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,13 @@ version: '3.8'
 
 services:
   github-report-app:
-    build: .
+    build:
+      context: .
+      args:
+        # Use host user ID in dev, defaults to 1000 if not set
+        USER_ID: ${USER_ID:-1000}
+        GROUP_ID: ${GROUP_ID:-1000}
+        USERNAME: ${USERNAME:-appuser}
     ports:
       - "8000:8000"
     environment:
@@ -18,6 +24,8 @@ services:
       # Mount docs and reports directories for persistent storage
       - ./docs:/app/docs
       - ./reports:/app/reports
+      # Mount .git directory for auto-commit/push operations
+      - ./.git:/app/.git
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/github-report"]
