--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "uvicorn>=0.15.0",
     "httpx>=0.24.1",
     "pydantic>=1.10.12",
-    "PyYAML>=6.0"
+    "PyYAML>=6.0",
+    "APScheduler>=3.10.0",
+    "GitPython>=3.1.0"
 ]
 [[project.authors]]
 name = "Jane Zhao"
