Add comprehensive tests for overwrite logic
- Added 10 new tests covering overwrite functionality
- Tests verify _find_and_remove_old_report() behavior
- Tests verify _update_reports_index() duplicate removal
- Tests verify same iteration overwrites correctly
- Tests verify skip_duplicate_check parameter works
- Tests verify None iteration handling
- Tests verify HTML formatting and markdown table rendering
- Updated Dockerfile to include pytest and pytest-asyncio
- Updated docker-compose.yml to mount tests directory
- All 13 tests pass successfully

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
     volumes:
       # Mount source code for development (optional)
       - ./src:/app/src:ro
+      # Mount tests directory for testing
+      - ./tests:/app/tests:ro
       # Mount docs and reports directories for persistent storage
       - ./docs:/app/docs
       - ./reports:/app/reports
