Clean up project and update documentation
Cleanup:
- Remove obsolete version field from docker-compose.yml
- Remove duplicate agent_mcp_demo/ directory (replaced by src/)
- Remove build artifacts (.DS_Store, .coverage, .pytest_cache, .benchmarks)
- Remove unused files (server.log, sample_data.json, run/, venv/)
- Update .gitignore to prevent future artifact commits

Documentation Updates:
- Add comprehensive test coverage section (92 tests across 5 components)
- Update test running instructions with Docker commands
- Document actual test structure and organization
- Remove outdated performance testing sections
- Update project structure to reflect current organization
- Add key test features (mocking, timezone support, async tests)
- Simplify testing documentation for clarity

All scripts (start-dev.sh, start-prod.sh, commit-reports.sh) remain functional.

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ doc/_build/
 # OS-specific
 .DS_Store
 Thumbs.db
+
+# Development artifacts
+server.log
+sample_data.json
+run/
+agent_mcp_demo/  # Old structure, replaced by src/agent_mcp_demo
