--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "MCP server with two agents: one for API, one for JSON file"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "mcp==1.10.1",
+    "mcp>=1.12.2",
     "PyGithub>=2.3.0",
     "python-dotenv>=1.0.0",
     "fastapi>=0.104.0",
