--- a/.github/iteration-schedule.yml
+++ b/.github/iteration-schedule.yml
@@ -3,6 +3,6 @@
 # This file is automatically updated when a report is generated.
 # The GitHub Action will only run on the date specified below.
 
-next_iteration_end_date: null  # Format: YYYY-MM-DD (e.g., 2025-11-17)
-next_iteration_name: null       # Name of the next iteration
-last_updated: null              # When this file was last updated
+next_iteration_end_date: 2025-11-17  # Format: YYYY-MM-DD (e.g., 2025-11-17)
+next_iteration_name: Iteration 67     # Name of the next iteration
+last_updated: 2025-11-19T12:00:00-05:00  # When this file was last updated
