Update workflows to use main branch instead of report-publish
- Change generate-iteration-report workflow to checkout and commit to main
- Change deploy-pages workflow to trigger on main branch changes
- Simplifies branch management by using default branch

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -3,7 +3,7 @@ name: Deploy Reports to GitHub Pages
 on:
   push:
     branches:
-      - report-publish
+      - main
     paths:
       - 'docs/**'
   workflow_dispatch:
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: report-publish
+          ref: main
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
