--- a/.github/iteration-schedule.yml
+++ b/.github/iteration-schedule.yml
@@ -1,3 +1,3 @@
-last_updated: '2025-11-30T23:09:43.421931-05:00'
-next_iteration_end_date: '2025-12-14'
-next_iteration_name: Iteration 69
+next_iteration_start_date: '2025-12-15'
+previous_iteration_name: Iteration 69
+last_updated: '2025-12-01T17:56:39.651398-05:00'
