Fix workflow: use update_iteration_schedule.py script
The workflow was still using inline Python code with old logic.
Now properly calls the updated script that uses next_iteration_start_date.

--- a/.github/workflows/generate-iteration-report.yml
+++ b/.github/workflows/generate-iteration-report.yml
@@ -226,69 +226,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_PAT || secrets.GITHUB_TOKEN }}
           GITHUB_ORG_NAME: ${{ secrets.ORG_NAME || secrets.GITHUB_ORG_NAME || 'WeMoAD-umich' }}
         run: |
-          python - << 'EOF'
-          import os
-          import yaml
-          from datetime import datetime
-          from zoneinfo import ZoneInfo
-          from pathlib import Path
-          from agent_mcp_demo.server import get_current_iteration_info
-          
-          try:
-              token = os.environ.get("GITHUB_TOKEN")
-              org_name = os.environ.get("GITHUB_ORG_NAME")
-              
-              if not token or not org_name:
-                  print("Missing required environment variables")
-                  exit(0)  # Don't fail the workflow
-              
-              # Get next iteration info from GitHub Projects
-              iteration_info = get_current_iteration_info(token, org_name, "Michigan App Team Task Board")
-              
-              if not iteration_info:
-                  print("No next iteration found, clearing schedule")
-                  schedule_data = {
-                      'next_iteration_end_date': None,
-                      'next_iteration_name': None,
-                      'last_updated': datetime.now(ZoneInfo("America/New_York")).isoformat()
-                  }
-              else:
-                  end_date_str = iteration_info.get('end_date', '')
-                  if end_date_str:
-                      # Parse and convert to date only (YYYY-MM-DD)
-                      end_date = datetime.fromisoformat(end_date_str.replace('Z', '+00:00'))
-                      end_date_eastern = end_date.astimezone(ZoneInfo("America/New_York"))
-                      
-                      schedule_data = {
-                          'next_iteration_end_date': end_date_eastern.date().isoformat(),
-                          'next_iteration_name': iteration_info.get('name', 'Unknown'),
-                          'last_updated': datetime.now(ZoneInfo("America/New_York")).isoformat()
-                      }
-                      
-                      print(f"Updated schedule for next iteration: {schedule_data['next_iteration_name']}")
-                      print(f"Next report date: {schedule_data['next_iteration_end_date']}")
-                  else:
-                      print("No end date found for next iteration")
-                      schedule_data = {
-                          'next_iteration_end_date': None,
-                          'next_iteration_name': None,
-                          'last_updated': datetime.now(ZoneInfo("America/New_York")).isoformat()
-                      }
-              
-              # Write to schedule file
-              schedule_file = Path(".github/iteration-schedule.yml")
-              with open(schedule_file, 'w') as f:
-                  yaml.dump(schedule_data, f, default_flow_style=False)
-              
-              print("Schedule file updated successfully")
-              
-          except Exception as e:
-              print(f"Error updating schedule: {e}")
-              import traceback
-              traceback.print_exc()
-              # Don't fail the workflow if schedule update fails
-              exit(0)
-          EOF
+          python scripts/update_iteration_schedule.py || echo "Failed to update schedule, continuing..."
           
       - name: Commit and push reports
         if: steps.check_date.outputs.should_generate == 'true'
