--- a/.github/workflows/generate-iteration-report.yml
+++ b/.github/workflows/generate-iteration-report.yml
@@ -1,10 +1,10 @@
 name: Generate Iteration Report
 
 on:
-  # Run daily at 11:00 PM Eastern time to check if it's the scheduled date
-  # Note: Will run at 10 PM during EST (winter) and 11 PM during EDT (summer)
+  # Run daily at 5:00 AM UTC to ensure local time is after midnight Eastern and to check if it's the scheduled date
+  # 5:00 AM UTC = 12:00 AM EST (midnight) / 1:00 AM EDT
   schedule:
-    - cron: '0 3 * * *'  # 3:00 AM UTC = 11 PM EDT / 10 PM EST
+    - cron: '0 5 * * *'  # 5:00 AM UTC = 12:00 AM EST / 1:00 AM EDT
   # Allow manual trigger
   workflow_dispatch:
 
