--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,5 @@ Thumbs.db
 server.log
 sample_data.json
 run/
-agent_mcp_demo/  # Old structure, replaced by src/agent_mcp_demo
+agent_mcp_demo/  # Old structure, replaced by src/agent_mcp_demo.vscode/*
+!.vscode/mcp.json
