--- a/.gitignore
+++ b/.gitignore
@@ -73,5 +73,6 @@ Thumbs.db
 server.log
 sample_data.json
 run/
-agent_mcp_demo/  # Old structure, replaced by src/agent_mcp_demo.vscode/*
+agent_mcp_demo/  # Old structure, replaced by src/agent_mcp_demo
+.vscode/*
 !.vscode/mcp.json
